firstattemptat starting thelogic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,25 @@
   </head>
 
   <body>
- 
+  <div class=container>
+    <div class=row>
+      <div class="col-lg-2">
+      </div>
+      <div class="col-lg-8">
+      <h3>Press Any Key To Start</h3>
+      <br>
+      <br>
+      <p>Wins:<p id="wow">0</p></p>
+      <br>
+      <p>Losses:<p id="boo">0</p></p>
+      <br>
+      <p>Lives Remaining:<p id="Lives">12</p></p>
+      <br>
+      <p>Letters Guessed So Far:<p id="uguesses"></p></p>
+      </div>
+      <div class="col-lg-2">
+    </div>  
+    </div>
  
   </body>
 </html>
