--- a/index.html
+++ b/index.html
@@ -2,40 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8">
-
     <title>Tim's Amazing Hangman Game</title>
-
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	
-	 <script src="assets/javascript/game.js"></script>
-    
-  
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
   </head>
-
   <body>
-  <div class=container>
-    <div class=row>
-      <div class="col-lg-2">
-      </div>
-      <div class="col-lg-8">
-      <h3>Press Any Key To Start</h3>
-      <br>
-      <br>
-      <p>Wins:<p id="wow">0</p></p>
-      <br>
-      <p>Losses:<p id="boo">0</p></p>
-      <br>
-      <p>Lives Remaining:<p id="Lives">12</p></p>
-      <br>
-      <p>Letters Guessed So Far:<p id="uguesses"></p></p>
-      </div>
-      <div class="col-lg-2">
-    </div>  
-    </div>
- 
+    <h1 id="guessWord"></h1>
+    <br>
+    <h1 id="guessesMade"></h1>
+    <br>
+    <h1 id="lives"></h1>
+    <br>
+    <h1 id="wins"></h1>
+    <br>
+    <h1 id="losses"></h1>
+    <br>
   </body>
 </html>
